2003/12/05 07:49 (-0500) rwmcfa1

	* t/accel-group-map.t: initial import of accel group and accel map test
	accel has some issues, way more to come, and resolution of those as 
	well.

2003/12/04 23:23 (-0500) rwmcfa1

	* t/calendar.t: initial import

2003/12/04 21:35 (-0500) muppetman

	* Gtk2.pm: bump version to 1.030 for next unstable devel series.
	sync authors section with the AUTHORS file.

	* AUTHORS: remove circular file reference and point readers to the
	LICENSE file rather than including more boilerplate than content.

2003/12/04 13:10 (-0500) rwmcfa1

	* Makefile.PL: moved the --disable-apidoc thing to MakeHelper.pm, that
	way everyone can use it.

2003/12/04 09:44 (-0500) rwmcfa1

	* fetch_faq.pl, MANIFEST: initial import for fetch_faq.pl, needs 
	testing

	* Makefile.PL: --enable-faq and --disable-apidoc added and worked out

2003/12/04 00:51 (-0500) rwmcfa1

	* : Merge of rel-1-02 doc and fixes back. (following 3 apply)

	* xs/(bunch).xs: ... (list) comments corrected

	* xs/GtkTreeDnd.xs: ^ and fixed bug in api of 
	gtk_tree_drag_source_drag_data_get, selection_data is an out param.

	* xs/(bunch).xs: s/=(arg|signature)/=for $1/

2003/12/02 13:58 (-0500) rwmcfa1

	* : Merge of rel-1-02 doc and fixes back. (following 2 apply)

	* xs/GdkEvent.xs, xs/GdkPixmap.xs, xs/GtkObject.xs: doc

	* xs/GdkDnd.xs xs/GdkProperty.xs, xs/GtkClipboard.xs, xs/GtkDnd.xs,
	xs/GtkListStore.xs, xs/GtkSelection.xs, xs/GtkTextBuffer.xs,
	xs/GtkTreeDnd.xs, xs/GtkTreeStore.xs, xs/GtkTreeView.xs,
	xs/GtkTreeViewColumn.xs: api doc additions.

2003/11/29 16:51 (-0500) muppetman

	* t/ignore_keyboard.pl: merge test helper script from head
	* Gtk2.pm, README: bump to 1.013
	* Makefile.PL: require Glib 1.013

2003/11/29 12:21 (-0500) muppetman

	* xs/GtkMessageDialog.xs: gtk_message_dialog_new uses printf-like
	semantics and does not offer a safe literal version.  pass the message
	through "%s" to be safe, and allow Gtk2::MessageDialog->new to take
	printf-like arguments to be nice.