@@ -17,7 +17,7 @@ use Test::More;
 
 if (Gtk2->init_check)
 {
-	plan tests => 4;
+	plan tests => 7;
 }
 else
 {
@@ -29,7 +29,7 @@ else
 
 require './t/ignore_keyboard.pl';
 
-ok( my $win = Gtk2::Window->new() );
+my $win = Gtk2::Window->new();
 $win->set_border_width(10);
 
 ok (my $accel = Gtk2::AccelGroup->new, 'Gtk2::AccelGrop->new');
@@ -44,22 +44,32 @@ $accel->connect (42, qw/control-mask/, [], \&conn_func);
 $accel->connect (42, qw/shift-mask/, 'visible', 
 	sub { ok(1, 'connect_func alt') });
 
-# $accel->connect_by_path
-# TODO: $win->groups_from_object (
+# TODO: $accel->connect_by_path
 
+$win->add_accel_group ($accel);
 $accel->lock;
 $win->show_all;
 
+is (Gtk2->accel_groups_from_object ($win), $accel, 
+	'Gtk2->accel_groups_from_object');
+
 Glib::Idle->add (sub {
 
-		# TODO: $win->activate (
+		Gtk2->accel_groups_activate ($win, 42, qw/control-mask/);
+		Gtk2->accel_groups_activate ($win, 42, qw/shift-mask/);
 		
 		Gtk2->main_quit;
 		$accel->unlock;
 
-		ok ($accel->disconnect_key (42, qw/shift-mask/));
-		ok ($accel->disconnect (\&conn_func));
-		# TODO: core dumps, ok (not $accel->disconnect_key (42, qw/shift-mask/));
+		ok ($accel->disconnect_key (42, qw/shift-mask/), 
+			'disconnect_key shift-mask');
+		ok ($accel->disconnect (\&conn_func), 'disconnect conn_func');
+		SKIP: {
+			# TODO: when this is fixed, test for version
+			skip 'disconnect_key from empty group, bug in gtk+', 1;
+			ok (not ($accel->disconnect_key (42, qw/shift-mask/)),
+				'second disconnect_key shift-mask should fail');
+		}
 
 		0;
 	});
